# AdventOfCode2021

./: .gitignore  MANIFEST.in  README.md  setup.cfg
adventofcode2021/: __main__.py  main.py
adventofcode2021/days/: day1.py  day2.py  day3.py
adventofcode2021/lib/: advent_utils.py
tests/: adventofcode2021_test.py
