[metadata]
name = adventofcode2021
version = attr: adventofcode2021.__version__
description = adventofcode2021
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/digiduncan/adventofcode2021
    Tracker=https://github.com/digiduncan/adventofcode2021/issues

[options]
packages = find:
python_requires = >=3.9
zip_safe = yes
include_package_data = True
install_requires =
    requests==2.22.0

[options.extras_require]
dev =
    pytest==6.2.5
    flake8==4.0.1
    autopep8==1.6.0

[options.entry_points]
console_scripts =
    adventofcode2021 = adventofcode2021.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
